k8s/food-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-service-deployment
  labels:
    app: food-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: food-service
  template:
    metadata:
      labels:
        app: food-service
    spec:
      containers:
      - name: food-service
        image: sleepytmzd/food-service:v5
        ports:
        - containerPort: 8081
        startupProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 100   # give your app some time to start
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30
              
        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: food-service-service
  annotations:
    cloud.google.com/backend-config: '{"default":"food-service-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: food-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      # nodePort: 30100
