k8s/hangout-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hangout-service-deployment
  labels:
    app: hangout-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hangout-service
  template:
    metadata:
      labels:
        app: hangout-service
    spec:
      containers:
      - name: hangout-service
        image: sleepytmzd/hangout-service:v1
        ports:
        - containerPort: 8091
        startupProbe:
          httpGet:
            path: /health
            port: 8091
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health
            port: 8091
          initialDelaySeconds: 100   # give your app some time to start
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        livenessProbe:
          httpGet:
            path: /health
            port: 8091
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30
              
        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: hangout-service-service
  annotations:
    cloud.google.com/backend-config: '{"default":"hangout-service-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: hangout-service
  ports:
    - protocol: TCP
      port: 8091
      targetPort: 8091
      # nodePort: 30100
