k8s/mongo-hangout.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-hangout-deployment
  labels:
    app: mongodb-hangout
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-hangout
  template:
    metadata:
      labels:
        app: mongodb-hangout
    spec:
      containers:
      - name: mongodb-hangout
        image: mongo:7.0.5
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"     
            memory: "250Mi"  
          limits:
            cpu: "500m"    
            memory: "1Gi"
        volumeMounts:
          - name: mongodb-data
            mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-hangout-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-hangout-service
spec:
  selector:
    app: mongodb-hangout
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
