k8s/mongo-review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-review-deployment
  labels:
    app: mongodb-review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-review
  template:
    metadata:
      labels:
        app: mongodb-review
    spec:
      containers:
      - name: mongodb-review
        image: mongo:7.0.5
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "100m"     
            memory: "250Mi"  
          limits:
            cpu: "500m"    
            memory: "1Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-review-service
spec:
  selector:
    app: mongodb-review
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
