k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-food-deployment
  labels:
    app: mongodb-food
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-food
  template:
    metadata:
      labels:
        app: mongodb-food
    spec:
      containers:
      - name: mongodb-food
        image: mongo:7.0.5
        ports:
        - containerPort: 27017
        resources:
          requests:
            cpu: "250m"     
            memory: "512Mi"  
          limits:
            cpu: "500m"    
            memory: "1Gi"

---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-food-service
spec:
  selector:
    app: mongodb-food
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
