k8s/postgres-user.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user-deployment
  labels:
    app: postgres-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
      - name: postgres-user
        image: postgres:17.6
        ports:
        - containerPort: 5432
        resources:
          requests:
            cpu: "100m"     
            memory: "250Mi"  
          limits:
            cpu: "500m"    
            memory: "1Gi"
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
          subPath: user
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-user-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-user-service
spec:
  selector:
    app: postgres-user
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
