k8s/recom-agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recom-agent-deployment
  labels:
    app: recom-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recom-agent
  template:
    metadata:
      labels:
        app: recom-agent
    spec:
      containers:
      - name: recom-agent
        image: sleepytmzd/recomm-agent:v2
        ports:
        - containerPort: 8020
        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: recom-agent-service
spec:
  type: NodePort
  selector:
    app: recom-agent
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8020
      # nodePort: 30100
