k8s/restaurant-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service-deployment
  labels:
    app: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
      - name: restaurant-service
        image: sleepytmzd/restaurant-service:v1
        ports:
        - containerPort: 8089
        startupProbe:
          httpGet:
            path: /health
            port: 8089
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health
            port: 8089
          initialDelaySeconds: 100   # give your app some time to start
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        livenessProbe:
          httpGet:
            path: /health
            port: 8089
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: restaurant-service-service
  annotations:
    cloud.google.com/backend-config: '{"default":"restaurant-service-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
      # nodePort: 30100
