k8s/user-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: sleepytmzd/user-service:v6
        ports:
        - containerPort: 8084
        startupProbe:
          httpGet:
            path: /health
            port: 8084
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health
            port: 8084
          initialDelaySeconds: 100   # give your app some time to start
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        livenessProbe:
          httpGet:
            path: /health
            port: 8084
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30
              
        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  annotations:
    cloud.google.com/backend-config: '{"default":"user-service-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
      # nodePort: 30100
