k8s/visit-service.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: visit-service-deployment
  labels:
    app: visit-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visit-service
  template:
    metadata:
      labels:
        app: visit-service
    spec:
      containers:
      - name: visit-service
        image: sleepytmzd/visit-service:v4
        ports:
        - containerPort: 8082
        startupProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        readinessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 100   # give your app some time to start
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        livenessProbe:
          httpGet:
            path: /health
            port: 8082
          initialDelaySeconds: 100
          periodSeconds: 10
          timeoutSeconds: 20
          failureThreshold: 30

        resources:
          requests:
            cpu: "100m"       
            memory: "256Mi"  
          limits:
            cpu: "200m"       
            memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: visit-service-service
  annotations:
    cloud.google.com/backend-config: '{"default":"visit-service-backendconfig"}'
spec:
  type: NodePort
  selector:
    app: visit-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      # nodePort: 30100
